2007-03-05  Djihed Afifi  <djihed@gmail.com>

	* people.xml.in: Info about myself.
	* language-release-doc-stats-modules.tmpl: Added padding for sub
	modules for rtl langs
	*  language-release-ui-stats-modules.tmpl: 

2007-03-04  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Corrected branch for gnome-mag.

2007-03-04  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-mag and gnome-power-manager branched
	for 2.18

2007-03-03  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Add some more gimp modules: gimp-freetype,
	gimp-gap, gimp-ruby, gimp-tiny-fu.

2007-03-02  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Corrected references to NetworkManager and
	network-manager-applet stable.
	Fixes bug #413556.

2007-03-02  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: gthumb refers now to trunk.

2007-03-01  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Updated teams and people (fr, ku, mg).

2007-03-01  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Add references to 3 gnome-games manuals.
	* releases.xml.in: Branched gucharmap for gnome-2-16.

2007-03-01  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Add references to g-s-t shared folders and
	anjuta manuals.
	* releases.xml.in: Make epiphany-extensions appear in gnome-extras.

2007-03-01  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Removed old modules (red-carpet, rmm-utils,
	libgnomesu, notifier, update-manager, gnome-pim, battfink,
	gnome-menu-editor, netapplet, jamboree, slab).
	Fixes bug #405493.
	
2007-02-28  Djihed Afifi  <djihed@gmail.com>

	* gnome-modules.xml.in : mark gnome-2-18 packages string frozen.
	* releases.xml.in : mark gnome-2-18 string frozen.
	* translation-teams.xml.in : Add description for Arabic team.