@@ -203,8 +203,9 @@
     </branch>
   </module>
   <module id="tomboy">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="gnome-doc-utils">
     <branch id="HEAD" stringfrozen="true"/>
@@ -303,9 +304,10 @@
     <branch id="gnome-2-16" stringfrozen="true"/>
   </module>
   <module id="metacity">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="evolution-jescs">
     <branch id="HEAD"/>
@@ -451,8 +453,9 @@
     <branch id="gnome-2-16" stringfrozen="true"/>
   </module>
   <module id="orca">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="gnome-pilot-conduits">
     <branch id="HEAD"/>
