@@ -399,14 +399,14 @@
       <module id="libgnomeprintui"/>
       <module id="libgtop"/>
       <module id="libwnck"/>
-      <module id="metacity"/>
+      <module id="metacity" branch="gnome-2-18"/>
       <module id="nautilus"/>
       <module id="nautilus-cd-burner"/>
       <module id="network-manager-applet" branch="network-manager-applet-0-6"/>
-      <module id="orca"/>
+      <module id="orca" branch="gnome-2-18"/>
       <module id="seahorse"/>
       <module id="sound-juicer"/>
-      <module id="tomboy"/>
+      <module id="tomboy" branch="gnome-2-18"/>
       <module id="totem"/>
       <module id="vino"/>
       <module id="vte"/>
