@@ -1,3 +1,8 @@
+2007-03-05  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: orca, tomboy and metacity branched for 2.18.
+
 2007-03-05  Djihed Afifi  <djihed@gmail.com>
 
 	* people.xml.in: Info about myself.
